# smart-linux-assistant

./: .coverage  .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
linux_assistant/: __init__.py
linux_assistant/cli/: main.py
linux_assistant/config/: settings.py
linux_assistant/exceptions/: __init__.py  base.py
linux_assistant/models/: __init__.py  command_result.py  history_entry.py
linux_assistant/repositories/: __init__.py  history_repository.py
linux_assistant/services/: __init__.py  command_executor.py  explainer.py  search.py
linux_assistant/utils/: groq_client.py  logger.py  shell.py
tests/: test_cli.py  test_command_executor.py  test_explainer.py  test_groq_client.py  test_history_repository.py  test_search.py  test_shell.py
