[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-linux-assistant"
version = "0.1.0"
description = "An AI-powered Linux productivity assistant for command analysis, troubleshooting, and knowledge management."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

authors = [
    { name = "Shubham Kumar Jha" }
]

keywords = [
    "linux",
    "cli",
    "automation",
    "terminal",
    "devops",
    "shell",
    "productivity"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Environment :: Console",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
    "Development Status :: 3 - Alpha"
]

dependencies = [
    "typer>=0.12.0",
]

[project.urls]
Homepage = "https://github.com/shubham-k-jha-dev/smart-linux-assistant"
Repository = "https://github.com/shubham-k-jha-dev/smart-linux-assistant"
Issues = "https://github.com/shubham-k-jha-dev/smart-linux-assistant/issues"

[project.scripts]
smart-linux = "linux_assistant.cli.main:app"
sla = "linux_assistant.cli.main:app"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["linux_assistant*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"

strict = true
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88